:safety_vest: Sonar fixes